test/cli/test/images/mutate-digest/policies.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-image-digest
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
spec:
  rules:
    - name: mutate-digest
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
        - imageReferences:
            - "*"
          required: false
          mutateDigest: true
