test/cli/test/images/mutate-digest/resources.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: changefordigest
  namespace: test
  labels:
    app: app
spec:
  containers:
    - name: nginx
      image: nginx:latest
---
apiVersion: v1
kind: Pod
metadata:
  name: nochangefordigest
  namespace: test
  labels:
    app: app
spec:
  containers:
    - name: nginx
      image: nginx:latest@sha256:859ab6768a6f26a79bc42b231664111317d095a4f04e4b6fe79ce37b3d199097
